# ai-framework-reaper

./: .gitignore  MANIFEST.md  README.md  pyproject.toml
.cursor/commands/: ingest-score.md  reaper-scaffold.md  start-task.md  update-docs.md
.cursor/rules/: 00-project-direction.mdc  01-mvp-boundaries.mdc  02-decision-integrity.mdc  03-docs-first.mdc
docs/: DEVELOPMENT.md  README.md  STRUCTURE.md  acceptance-criteria.md  architecture.md  constraints-and-assumptions.md  data-flow.md  documentation-standard.md  functional-requirements.md  integration-guitar-pro.md  integration-reaper.md  internal-data-model.md  mvp-roadmap.md  non-functional-requirements.md  open-questions.md  phase1-first-slice.md  problem-statement.md  product-vision.md  risks.md  scope.md  screenshot-ingestion-strategy.md  use-cases.md
docs/adr/: ADR-001-target-architecture.md  ADR-002-reaper-integration-strategy.md  ADR-003-guitarpro-ingestion-strategy.md  ADR-004-score-normalization-model.md  ADR-005-screenshot-to-structure-strategy.md  ADR-006-phase1-first-implementation-slice.md
fixtures/expected/: slice1_minimal_canonical.json  slice1_minimal_drums_canonical.json  slice1_minimal_drums_scaffold.json  slice1_minimal_scaffold.json
skills/docs-maintenance/: SKILL.md
skills/music-ingestion/: SKILL.md
skills/reaper-scaffold/: SKILL.md
src/: slice1_pipeline.py
src/domain/: __init__.py  errors.py  serialization.py  types.py
src/ingest/: __init__.py  contracts.py  musicxml.py
src/mapping/: __init__.py  slice1.py  (+1 more)
tasks/: _template.md  current-task.md
tests/: .gitignore  conftest.py
(+16 files in other folders)
